--- a/src/index.css
+++ b/src/index.css
@@ -218,13 +218,35 @@ body {
 	border-radius: 0.25rem;
 	padding: 0.5rem;
 	font-size: 1rem;
-	background-color: red;
 	color: #fff;
 	cursor: pointer;
 }
 
+.deleteButton {
+	background-color: red;
+}
+
+.editButton {
+	background-color: #2197b4;
+	margin-right: 1rem;
+}
+
 .statusMsg {
 	margin-top: 2rem;
+}
+
+.submit {
+	padding: 0.5rem;
+	margin-top: 1rem;
+	width: 100%;
+	font-size: 18px;
+	border-radius: 5px;
+	border: 1px solid grey;
+}
+
+.submit:hover {
+	background-color: rgb(209, 209, 209);
+	cursor: pointer;
 }
 
 @media only screen and (min-width: 610px) {
